HEAD
----

0.1.20
----
* make wrangler a little less rails-specific. won't be able to send notifications, but can at least include Wrangler....

0.1.19
----
* default the error string (becomes part of email subject content) to first error in error_messages if there is no exception object

0.1.18
----
* fixing a bug that arises when code that either isn't an ActionController::Base that includes Wrangler or doesn't include Wrangler module at all passes in a request object to handle_error or handle_exception...because the request_data_from_request method was only available to controllers that included Wrangler. moved the relevant methods out into plain old Wrangler module.

0.1.17
----
* fixing bug in notification template that didn't properly display the exception class name.

0.1.16
----
* adding feature to allow blocking notification-sending when http params match certain patterns (e.g. for ignoring browsers you don't like). note that logs can still be logged to error log, just no notifications.

0.1.15
----
* some comments and notification grammar changes
* allowing notify_on_error to accept an optional message that gets logged on error
* fixing +handle_exception+ so that it logs request contents even if exception is nil

0.1.14
----
* adding method to allow sending notifications on arbitrary error condition detection with or without an actual exception

0.1.13
------
* bug fix to prevent to_str calls on exceptions to be called when they shouldn't (must've been an order of operations error or something :( )

0.1.12
------
* added an exception class for http status 403 - forbidden.

0.1.11
------
* no longer throw exceptions within handle_exception if the exception raised does not respond_to?(:to_str) (e.g. instances of Class).

0.1.7-10
--------